--- a/MenuSample/app/src/main/res/layout/activity_menu_thanks.xml
+++ b/MenuSample/app/src/main/res/layout/activity_menu_thanks.xml
@@ -68,6 +68,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/bt_thx_back"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
