--- a/MenuSample/app/src/main/res/layout/menu_row.xml
+++ b/MenuSample/app/src/main/res/layout/menu_row.xml
@@ -9,9 +9,10 @@
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="18dp"
         android:textSize="24dp"
-        app:layout_constraintBaseline_toBaselineOf="@id/tvYen"
+        app:layout_constraintBottom_toTopOf="@+id/tvPrice"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="唐揚げ定食" />
 
@@ -19,20 +20,24 @@
         android:id="@+id/tvYen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="331dp"
         android:text="@string/tv_menu_unit"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvName"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
     <TextView
         android:id="@+id/tvPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvName"
         app:layout_constraintEnd_toStartOf="@id/tvYen"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvName"
         tools:text="850" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
