--- a/FragmentSample/app/src/main/res/layout/menu_low.xml
+++ b/FragmentSample/app/src/main/res/layout/menu_low.xml
@@ -7,12 +7,12 @@
     android:background="?attr/selectableItemBackground">
 
     <TextView
-        android:id="@+id/MenuName"
+        android:id="@+id/menuName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="マリトッツォ" />
@@ -21,11 +21,12 @@
         android:id="@+id/menuPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toStartOf="@+id/MenuName"
-        app:layout_constraintTop_toBottomOf="@+id/MenuName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/menuName"
+        app:layout_constraintTop_toBottomOf="@+id/menuName"
         tools:text="450" />
 
     <TextView
@@ -37,5 +38,4 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBaseline_toBaselineOf="@+id/menuPrice"
         app:layout_constraintStart_toEndOf="@+id/menuPrice" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
