--- a/DatabaseSample/app/src/main/res/layout/activity_main.xml
+++ b/DatabaseSample/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         app:layout_constraintGuide_begin="294dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/btCocktail"
+        android:id="@+id/lvCocktail"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/gILvCocktail"
